deploy/local/observability/grafana-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-http
  namespace: observability
spec:
  parentRefs:
    - name: local
      namespace: ingress
      sectionName: web
      kind: Gateway
  hostnames:
    - grafana.greenstar.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-https
  namespace: observability
spec:
  parentRefs:
    - name: local
      namespace: ingress
      sectionName: websecure
      kind: Gateway
  hostnames:
    - grafana.greenstar.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: grafana
          namespace: observability
          port: 80
