deploy/local/observability/prometheus-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-http
spec:
  parentRefs:
    - name: local
      namespace: ingress
      sectionName: web
      kind: Gateway
  hostnames:
    - prometheus.greenstar.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-https
spec:
  parentRefs:
    - name: local
      namespace: ingress
      sectionName: websecure
      kind: Gateway
  hostnames:
    - prometheus.greenstar.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: prometheus-server
          namespace: observability
          port: 80
